# RBC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  example.cpp  makefile  optimizedcollstest.cpp
RangeBasedComm/: RBC.cpp  RBC.hpp  RangeGroup.hpp  Requests.hpp
RangeBasedComm/Collectives/: Allgather.cpp  Allreduce.cpp  AllreduceTwotree.cpp  Barrier.cpp  Bcast.cpp  Exscan.cpp  Gather.cpp  Reduce.cpp  Scan.cpp  ScanAndBcast.cpp  ScanAndBcastTwotree.cpp  ScanTwotree.cpp  Twotree.cpp  Twotree.hpp
RangeBasedComm/PointToPoint/: Recv.cpp  Recv.hpp  Send.cpp  Send.hpp  Sendrecv.cpp  Sendrecv.hpp
Sort/: Constants.hpp  RequestVector.hpp  SQuick.hpp  SortingDatatype.hpp  TbSplitter.hpp
Sort/SQuick/: Constants.hpp  DataExchange.hpp  PivotSelection.hpp  QSInterval.hpp  QuickSort.hpp  SequentialSort.hpp  SortingDatatype.hpp  TbSplitter.hpp
cmake/: add_database_to_rtags_module.cmake  add_header_commands.py  add_header_commands_module.cmake
codestyle/: analyze-source.pl  cpplint.py  uncrustify.cfg
example/: rbc_example.cpp
include/RBC/: EvilHeaders.hpp  MachineConstants.hpp  RBC.hpp
src/RBC/: RBC.cpp  RangeGroup.cpp  RangeGroup.hpp
src/RBC/Collectives/: Allgather.cpp  Allreduce.cpp  AllreduceTwotree.cpp  Alltoall.cpp  Barrier.cpp  Bcast.cpp  BcastTwotree.cpp  BinaryTree.cpp  BinaryTree.hpp  Collectives.hpp  Exscan.cpp  ExscanTwotree.cpp  Gather.cpp  Gatherm.cpp  Gatherv.cpp  Reduce.cpp  ReduceTwotree.cpp  Scan.cpp  Scan.hpp  ScanAndBcast.cpp  ScanAndBcastTwotree.cpp  ScanTwotree.cpp  Twotree.cpp  Twotree.hpp
src/RBC/PointToPoint/: Recv.cpp  Recv.hpp  Send.cpp  Send.hpp  Sendrecv.cpp  Sendrecv.hpp
test/: test_optimizedcolls.cpp  test_optimizedcolls.sh
